--- a/public/500.html
+++ b/public/500.html
@@ -24,7 +24,8 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
+    <p>Please contact the <a href="mailto:assembly@cornell.edu">Office of the Assemblies</a> for further assistance.</p>
   </div>
 </body>
 </html>
+
